--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,28 @@ html, body{
     margin: 0;   
     font-family: 'din-condensed', sans-serif;
     color: white;
-    background-color: black;
+    background-color: white;
     font-size: 16px;
 }
+
+body::-webkit-scrollbar {
+  width: 8px;
+    height: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #454545;
+  border-radius: 3px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: grey;
+}
+
 
 * {
     box-sizing: border-box;
@@ -26,10 +45,19 @@ bobs{
     height: 100vh;
 }
 
+nav {
+    background-color: black;
+    z-index: 9999;
+    width: 100%;
+    height: 75px;
+    position: fixed;
+}
+
 nav img{
     width: 167px;
     height: 45px;
     vertical-align: middle;
+    position: fixed;
 }
 
 nav a.logo{
@@ -259,4 +287,36 @@ nav .signin:hover, .watch:hover{
 .close:hover,
 .close:focus {
   cursor: pointer;
+}
+
+.container {
+    display: flex;
+    padding: 0 55px;
+    overflow: hidden;
+    overflow-x: scroll;
+    width: 100%; 
+    height: 200px;
+    align-items: center;
+    background-color: black;
+}
+
+.item {
+    background: green;
+    flex: 0 0 19.7%;
+    text-align: center;
+    margin: 0 2px;
+    transition: transform 300ms ease 100ms;
+    height: 100px;
+}
+
+.container:hover .item {
+   transform: translateX(-25%);
+}
+
+.item:hover {
+  transform: scale(1.5) !important;
+}
+
+.item:hover ~ .item {
+   transform: translateX(25%);
 }
