--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,21 @@ html, body{
     font-size: 16px;
 }
 
-body::-webkit-scrollbar {
-  width: 8px;
+::-webkit-scrollbar {
     height: 8px;
+    width: 8px;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: transparent;
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: #454545;
   border-radius: 3px;
 }
 
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background: grey;
 }
 
@@ -315,6 +315,8 @@ nav .signin:hover, .watch:hover{
 
 .item:hover {
   transform: scale(1.5) !important;
+    background-color: white;
+    color: black;
 }
 
 .item:hover ~ .item {
