--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html, body{
     margin: 0;   
     font-family: 'din-condensed', sans-serif;
     color: white;
-    background-color: white;
+    background-color: black;
     font-size: 16px;
 }
 
