--- a/css/home.css
+++ b/css/home.css
@@ -282,7 +282,8 @@ nav .signin:hover, .watch:hover{
 }
 
 main {
-    padding-left: 10px;
+    padding-left: 3vw;
+    padding-right: 3vw;
 }
 
 .container {
