--- a/css/video.css
+++ b/css/video.css
@@ -1,4 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Fira+Sans:200,400,500,600,700|Plaster);
+html{
+    margin: 0;   
+    font-family: 'din-condensed', sans-serif;
+    color: white;
+    background-color: black;
+    font-size: 16px;
+}
 
 body {
   margin: 0;
@@ -34,10 +40,45 @@ body::-webkit-scrollbar-thumb:hover {
   box-sizing: border-box;
 }
 
+nav {
+    background-color: black;
+    z-index: 9999;
+    width: 100%;
+    height: 75px;
+    position: fixed;
+    padding-right: 3vw;
+    padding-top: 15px;
+}
+
+nav form {
+    float: right;
+    align-items: center;
+    display: flex;
+}
+
+nav input[type=text] {
+    border: none;
+    border-bottom: 10px, #e50914;
+    background-color: transparent;
+    color: white;
+    height: 40px;
+    width: 10vw;
+}
+
+nav button {
+    height: 40px;
+    width: 40px;
+    text-decoration: none;
+    background-color: #e50914;
+    color: white;
+    border: none;
+}
+
 nav img{
     width: 167px;
     height: 45px;
     vertical-align: middle;
+    position: fixed;
 }
 
 nav a.logo{
@@ -149,8 +190,8 @@ header nav{
   margin-left: 10px;
 }
 
-.video-page .video-page-header .video-description .header-right .rating {
-  width: 75px;
+.rating {
+  width: 100px;
   text-align: center;
   border-radius: 0.25rem;
   margin-bottom: 20px;
