--- a/css/video.css
+++ b/css/video.css
@@ -12,7 +12,7 @@ body {
   overflow-x: hidden;
   font-family: 'Muli', sans-serif;
   background-color: black;
-  background-image: linear-gradient(0deg, black 0%, black 0%, rgba(0, 0, 0, 0.8) 100%), url('../img/doctorstrange.jpg');
+  background-image: linear-gradient(0deg, black 0%, black 0%, rgba(0, 0, 0, 0.8) 100%), url('../img/background.png');
   background-attachment: fixed;
   background-size: cover;
   background-repeat: none;
