--- a/css/home.css
+++ b/css/home.css
@@ -334,11 +334,25 @@ main {
     margin: 0 2px;
     transition: transform 300ms ease 100ms;
     height: 100px;
+    border: none;
+}
+
+.item p{
+    float: left;
+    transform: translateY(35px);
+    font-size: 16px;
+    z-index: 100;
 }
 
 .item a{
     text-decoration: none;
     color: white;
+}
+
+.item img{
+    height: 100px;
+    width: 100%;
+    transform: translateY(-50px);    
 }
 
 .container:hover .item {
@@ -351,4 +365,58 @@ main {
 
 .item:hover ~ .item {
    transform: translateX(25%);
+}
+
+#opened1 {
+    width: 100%;
+    padding: 20px;
+    background-image:url("../img/background.png");
+    margin-top: 20px;
+    display: none;
+    height: 50vh;
+    
+    animation: fadein 2s;
+    -moz-animation: fadein 2s; /* Firefox */
+    -webkit-animation: fadein 2s; /* Safari and Chrome */
+    -o-animation: fadein 2s; /* Opera */
+}
+
+@keyframes fadein {
+    from {opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+#opened1 button {
+    background-color: #e50914;
+    color: white;
+    border-radius: 5px;
+    border-color: #e50914;
+    height: 30px;
 }
