--- a/css/home.css
+++ b/css/home.css
@@ -329,13 +329,14 @@ main {
 
 .item {
     padding: 2px;
-    background-color: #404040;
+    background-color: transparent;
     flex: 0 0 15%;
     text-align: center;
     margin: 0 2px;
     transition: transform 300ms ease 100ms;
     height: 100px;
     border: none;
+    outline: none;
 }
 
 .item p{
@@ -370,10 +371,10 @@ main {
 #opened1 {
     width: 100%;
     padding: 20px;
-    background-image:url("../img/background.png");
+    background-image:url("../img/1.png");
     margin-top: 20px;
     display: none;
-    height: 50vh;
+    height: 25vh;
     
     animation: fadein 2s;
     -moz-animation: fadein 2s; /* Firefox */
@@ -419,7 +420,7 @@ main {
     background-image:url("../img/2.png");
     margin-top: 20px;
     display: none;
-    height: 50vh;
+    height: 25vh;
     
     animation: fadein 2s;
     -moz-animation: fadein 2s; /* Firefox */
