--- a/css/home.css
+++ b/css/home.css
@@ -59,7 +59,7 @@ nav form {
 
 nav input[type=text] {
     border: none;
-    border-bottom: 10px, #e50914;
+    border-bottom: 10px, #b33428;
     background-color: transparent;
     color: white;
     height: 40px;
@@ -70,7 +70,7 @@ nav button {
     height: 40px;
     width: 40px;
     text-decoration: none;
-    background-color: #e50914;
+    background-color: #b33428;
     color: white;
     border: none;
 }
@@ -96,7 +96,7 @@ header nav{
 nav .signin{
     color: #fff;
     float: right;
-    background-color: #e50914;
+    background-color: #b33428;
     line-height: normal;
     margin-top: 18px;
     margin-right: 3%;
@@ -106,6 +106,58 @@ nav .signin{
     font-size: 16;
     text-decoration: none;
 }
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+    z-index: 999;
+    transform: translateX(25vw);
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: #b33428;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.dropbtn {
+  background-color: #b33428;
+}
+
+.dropdown:hover {
+    background-color: rgba()
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.3);
+  min-width: 160px;
+}
+
+.dropdown-content a {
+  float: none;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
 
 .pitch{
     margin: 0 3%;
@@ -447,6 +499,20 @@ main {
     -o-animation: fadein 2s; /* Opera */
 }
 
+#opened4 {
+    width: 100%;
+    padding: 20px;
+    background-image:url("../img/2.png");
+    margin-top: 20px;
+    display: none;
+    height: 25vh;
+    
+    animation: fadein 2s;
+    -moz-animation: fadein 2s; /* Firefox */
+    -webkit-animation: fadein 2s; /* Safari and Chrome */
+    -o-animation: fadein 2s; /* Opera */
+}
+
 .content button {
     background-color: #e50914;
     color: white;
@@ -455,7 +521,7 @@ main {
     height: 30px;
 }
 
-#opened1,#opened2,#opened3 img{
+#opened1,#opened2,#opened3,#opened4 img{
     height: inherit;
     width: 100%;
 }
